<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/et_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:inputType="text"
            android:hint="@string/enter_book_name" />

        <RadioGroup
            android:id="@+id/radio_group_search_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/title"
                android:padding="4dp"/>

            <RadioButton
                android:id="@+id/radio_isbn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/isbn"
                android:padding="4dp"/>
        </RadioGroup>
        
        <Button
            android:id="@+id/btn_search_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/search_books"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="4dp"  />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_my_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bg_button"
            android:text="@string/go_to_my_books"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_bookmarked"
            android:drawablePadding="4dp" />

    </LinearLayout>

</FrameLayout>